fix: the overlay layout was shifted due to unintended line-height inheritance.

--- a/packages/react-core/src/styles/root.less
+++ b/packages/react-core/src/styles/root.less
@@ -4,6 +4,7 @@
   border-spacing: 0;
   width: fit-content;
   max-width: 100%;
+  line-height: normal;
   overflow: auto;
   font-family:
   "SF Pro Text",
